flex-bison/parser.output
Grammar

    0 $accept: block $end

    1 block: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: assignment_statement SEMICOLON
    5          | print_statement SEMICOLON
    6          | while_loop_statement
    7          | if_statement
    8          | function_statement
    9          | return_statement SEMICOLON
   10          | call_function_statement SEMICOLON

   11 indentifier: LETTER
   12            | LETTER LETTER
   13            | LETTER DIGIT

   14 assignment_statement: indentifier IN create
   15                     | indentifier IN assign

   16 create: LPAREN type RPAREN

   17 type: INT
   18     | STRING

   19 assign: EQUAL relexpre

   20 print_statement: PRINT LPAREN relexpre RPAREN

   21 while_loop_statement: WHILE relexpre LBRACE statement_list RBRACE

   22 if_statement: IF relexpre LBRACE statement_list RBRACE
   23             | IF relexpre LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

   24 function_statement: FUNC indentifier LPAREN RPAREN ON LBRACE statement_list RBRACE LPAREN type RPAREN
   25                   | FUNC indentifier LPAREN arg_list RPAREN ON LBRACE statement_list RBRACE LPAREN type RPAREN

   26 arg_list: indentifier
   27         | indentifier COMMA arg_list

   28 return_statement: RETURN relexpre

   29 call_lsit: relexpre
   30          | relexpre COMMA call_lsit

   31 call_function_statement: indentifier LPAREN RPAREN
   32                        | indentifier LPAREN call_lsit RPAREN

   33 relexpre: expression
   34         | expression CEQ expression
   35         | expression GREATER_THAN expression
   36         | expression LESS_THAN expression

   37 expression: term
   38           | term PLUS term
   39           | term MINUS term
   40           | term OR term
   41           | term DOT term

   42 term: factor
   43     | factor MULT factor
   44     | factor DIV factor
   45     | factor AND factor

   46 factor: PLUS factor
   47       | MINUS factor
   48       | NOT factor
   49       | number
   50       | string
   51       | LPAREN relexpre RPAREN
   52       | call_function_statement
   53       | READIN LPAREN RPAREN

   54 number: DIGIT
   55       | DIGIT number

   56 string: LETTER
   57       | LETTER string
   58       | DIGIT string


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    STRING (258) 18
    INT (259) 17
    LETTER (260) 11 12 13 56 57
    DIGIT (261) 13 54 55 58
    SEMICOLON (262) 4 5 9 10
    IN (263) 14 15
    ON (264) 24 25
    RETURN (265) 28
    PRINT (266) 20
    IF (267) 22 23
    ELSE (268) 23
    WHILE (269) 21
    FUNC (270) 24 25
    LBRACE (271) 21 22 23 24 25
    RBRACE (272) 21 22 23 24 25
    LPAREN (273) 16 20 24 25 31 32 51 53
    RPAREN (274) 16 20 24 25 31 32 51 53
    EQUAL (275) 19
    COMMA (276) 27 30
    CEQ (277) 34
    GREATER_THAN (278) 35
    LESS_THAN (279) 36
    PLUS (280) 38 46
    MINUS (281) 39 47
    OR (282) 40
    DOT (283) 41
    MULT (284) 43
    DIV (285) 44
    AND (286) 45
    NOT (287) 48
    READIN (288) 53


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    block (35)
        on left: 1
        on right: 0
    statement_list (36)
        on left: 2 3
        on right: 1 3 21 22 23 24 25
    statement (37)
        on left: 4 5 6 7 8 9 10
        on right: 2 3
    indentifier (38)
        on left: 11 12 13
        on right: 14 15 24 25 26 27 31 32
    assignment_statement (39)
        on left: 14 15
        on right: 4
    create (40)
        on left: 16
        on right: 14
    type (41)
        on left: 17 18
        on right: 16 24 25
    assign (42)
        on left: 19
        on right: 15
    print_statement (43)
        on left: 20
        on right: 5
    while_loop_statement (44)
        on left: 21
        on right: 6
    if_statement (45)
        on left: 22 23
        on right: 7
    function_statement (46)
        on left: 24 25
        on right: 8
    arg_list (47)
        on left: 26 27
        on right: 25 27
    return_statement (48)
        on left: 28
        on right: 9
    call_lsit (49)
        on left: 29 30
        on right: 30 32
    call_function_statement (50)
        on left: 31 32
        on right: 10 52
    relexpre (51)
        on left: 33 34 35 36
        on right: 19 20 21 22 23 28 29 30 51
    expression (52)
        on left: 37 38 39 40 41
        on right: 33 34 35 36
    term (53)
        on left: 42 43 44 45
        on right: 37 38 39 40 41
    factor (54)
        on left: 46 47 48 49 50 51 52 53
        on right: 42 43 44 45 46 47 48
    number (55)
        on left: 54 55
        on right: 49 55
    string (56)
        on left: 56 57 58
        on right: 50 57 58


State 0

    0 $accept: . block $end

    LETTER  shift, and go to state 1
    RETURN  shift, and go to state 2
    PRINT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    FUNC    shift, and go to state 6

    block                    go to state 7
    statement_list           go to state 8
    statement                go to state 9
    indentifier              go to state 10
    assignment_statement     go to state 11
    print_statement          go to state 12
    while_loop_statement     go to state 13
    if_statement             go to state 14
    function_statement       go to state 15
    return_statement         go to state 16
    call_function_statement  go to state 17


State 1

   11 indentifier: LETTER .
   12            | LETTER . LETTER
   13            | LETTER . DIGIT

    LETTER  shift, and go to state 18
    DIGIT   shift, and go to state 19

    $default  reduce using rule 11 (indentifier)


State 2

   28 return_statement: RETURN . relexpre

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    relexpre                 go to state 29
    expression               go to state 30
    term                     go to state 31
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 3

   20 print_statement: PRINT . LPAREN relexpre RPAREN

    LPAREN  shift, and go to state 35


State 4

   22 if_statement: IF . relexpre LBRACE statement_list RBRACE
   23             | IF . relexpre LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    relexpre                 go to state 36
    expression               go to state 30
    term                     go to state 31
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 5

   21 while_loop_statement: WHILE . relexpre LBRACE statement_list RBRACE

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    relexpre                 go to state 37
    expression               go to state 30
    term                     go to state 31
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 6

   24 function_statement: FUNC . indentifier LPAREN RPAREN ON LBRACE statement_list RBRACE LPAREN type RPAREN
   25                   | FUNC . indentifier LPAREN arg_list RPAREN ON LBRACE statement_list RBRACE LPAREN type RPAREN

    LETTER  shift, and go to state 1

    indentifier  go to state 38


State 7

    0 $accept: block . $end

    $end  shift, and go to state 39


State 8

    1 block: statement_list .
    3 statement_list: statement_list . statement

    LETTER  shift, and go to state 1
    RETURN  shift, and go to state 2
    PRINT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    FUNC    shift, and go to state 6

    $default  reduce using rule 1 (block)

    statement                go to state 40
    indentifier              go to state 10
    assignment_statement     go to state 11
    print_statement          go to state 12
    while_loop_statement     go to state 13
    if_statement             go to state 14
    function_statement       go to state 15
    return_statement         go to state 16
    call_function_statement  go to state 17


State 9

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


State 10

   14 assignment_statement: indentifier . IN create
   15                     | indentifier . IN assign
   31 call_function_statement: indentifier . LPAREN RPAREN
   32                        | indentifier . LPAREN call_lsit RPAREN

    IN      shift, and go to state 41
    LPAREN  shift, and go to state 42


State 11

    4 statement: assignment_statement . SEMICOLON

    SEMICOLON  shift, and go to state 43


State 12

    5 statement: print_statement . SEMICOLON

    SEMICOLON  shift, and go to state 44


State 13

    6 statement: while_loop_statement .

    $default  reduce using rule 6 (statement)


State 14

    7 statement: if_statement .

    $default  reduce using rule 7 (statement)


State 15

    8 statement: function_statement .

    $default  reduce using rule 8 (statement)


State 16

    9 statement: return_statement . SEMICOLON

    SEMICOLON  shift, and go to state 45


State 17

   10 statement: call_function_statement . SEMICOLON

    SEMICOLON  shift, and go to state 46


State 18

   12 indentifier: LETTER LETTER .

    $default  reduce using rule 12 (indentifier)


State 19

   13 indentifier: LETTER DIGIT .

    $default  reduce using rule 13 (indentifier)


State 20

   11 indentifier: LETTER .
   12            | LETTER . LETTER
   13            | LETTER . DIGIT
   56 string: LETTER .
   57       | LETTER . string

    LETTER  shift, and go to state 47
    DIGIT   shift, and go to state 48

    LPAREN    reduce using rule 11 (indentifier)
    $default  reduce using rule 56 (string)

    string  go to state 49


State 21

   54 number: DIGIT .
   55       | DIGIT . number
   58 string: DIGIT . string

    LETTER  shift, and go to state 50
    DIGIT   shift, and go to state 21

    $default  reduce using rule 54 (number)

    number  go to state 51
    string  go to state 52


State 22

   51 factor: LPAREN . relexpre RPAREN

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    relexpre                 go to state 53
    expression               go to state 30
    term                     go to state 31
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 23

   46 factor: PLUS . factor

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    factor                   go to state 54
    number                   go to state 33
    string                   go to state 34


State 24

   47 factor: MINUS . factor

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    factor                   go to state 55
    number                   go to state 33
    string                   go to state 34


State 25

   48 factor: NOT . factor

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    factor                   go to state 56
    number                   go to state 33
    string                   go to state 34


State 26

   53 factor: READIN . LPAREN RPAREN

    LPAREN  shift, and go to state 57


State 27

   31 call_function_statement: indentifier . LPAREN RPAREN
   32                        | indentifier . LPAREN call_lsit RPAREN

    LPAREN  shift, and go to state 42


State 28

   52 factor: call_function_statement .

    $default  reduce using rule 52 (factor)


State 29

   28 return_statement: RETURN relexpre .

    $default  reduce using rule 28 (return_statement)


State 30

   33 relexpre: expression .
   34         | expression . CEQ expression
   35         | expression . GREATER_THAN expression
   36         | expression . LESS_THAN expression

    CEQ           shift, and go to state 58
    GREATER_THAN  shift, and go to state 59
    LESS_THAN     shift, and go to state 60

    $default  reduce using rule 33 (relexpre)


State 31

   37 expression: term .
   38           | term . PLUS term
   39           | term . MINUS term
   40           | term . OR term
   41           | term . DOT term

    PLUS   shift, and go to state 61
    MINUS  shift, and go to state 62
    OR     shift, and go to state 63
    DOT    shift, and go to state 64

    $default  reduce using rule 37 (expression)


State 32

   42 term: factor .
   43     | factor . MULT factor
   44     | factor . DIV factor
   45     | factor . AND factor

    MULT  shift, and go to state 65
    DIV   shift, and go to state 66
    AND   shift, and go to state 67

    $default  reduce using rule 42 (term)


State 33

   49 factor: number .

    $default  reduce using rule 49 (factor)


State 34

   50 factor: string .

    $default  reduce using rule 50 (factor)


State 35

   20 print_statement: PRINT LPAREN . relexpre RPAREN

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    relexpre                 go to state 68
    expression               go to state 30
    term                     go to state 31
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 36

   22 if_statement: IF relexpre . LBRACE statement_list RBRACE
   23             | IF relexpre . LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 69


State 37

   21 while_loop_statement: WHILE relexpre . LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 70


State 38

   24 function_statement: FUNC indentifier . LPAREN RPAREN ON LBRACE statement_list RBRACE LPAREN type RPAREN
   25                   | FUNC indentifier . LPAREN arg_list RPAREN ON LBRACE statement_list RBRACE LPAREN type RPAREN

    LPAREN  shift, and go to state 71


State 39

    0 $accept: block $end .

    $default  accept


State 40

    3 statement_list: statement_list statement .

    $default  reduce using rule 3 (statement_list)


State 41

   14 assignment_statement: indentifier IN . create
   15                     | indentifier IN . assign

    LPAREN  shift, and go to state 72
    EQUAL   shift, and go to state 73

    create  go to state 74
    assign  go to state 75


State 42

   31 call_function_statement: indentifier LPAREN . RPAREN
   32                        | indentifier LPAREN . call_lsit RPAREN

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    RPAREN  shift, and go to state 76
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_lsit                go to state 77
    call_function_statement  go to state 28
    relexpre                 go to state 78
    expression               go to state 30
    term                     go to state 31
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 43

    4 statement: assignment_statement SEMICOLON .

    $default  reduce using rule 4 (statement)


State 44

    5 statement: print_statement SEMICOLON .

    $default  reduce using rule 5 (statement)


State 45

    9 statement: return_statement SEMICOLON .

    $default  reduce using rule 9 (statement)


State 46

   10 statement: call_function_statement SEMICOLON .

    $default  reduce using rule 10 (statement)


State 47

   12 indentifier: LETTER LETTER .
   56 string: LETTER .
   57       | LETTER . string

    LETTER  shift, and go to state 50
    DIGIT   shift, and go to state 79

    LPAREN    reduce using rule 12 (indentifier)
    $default  reduce using rule 56 (string)

    string  go to state 49


State 48

   13 indentifier: LETTER DIGIT .
   58 string: DIGIT . string

    LETTER  shift, and go to state 50
    DIGIT   shift, and go to state 79

    $default  reduce using rule 13 (indentifier)

    string  go to state 52


State 49

   57 string: LETTER string .

    $default  reduce using rule 57 (string)


State 50

   56 string: LETTER .
   57       | LETTER . string

    LETTER  shift, and go to state 50
    DIGIT   shift, and go to state 79

    $default  reduce using rule 56 (string)

    string  go to state 49


State 51

   55 number: DIGIT number .

    $default  reduce using rule 55 (number)


State 52

   58 string: DIGIT string .

    $default  reduce using rule 58 (string)


State 53

   51 factor: LPAREN relexpre . RPAREN

    RPAREN  shift, and go to state 80


State 54

   46 factor: PLUS factor .

    $default  reduce using rule 46 (factor)


State 55

   47 factor: MINUS factor .

    $default  reduce using rule 47 (factor)


State 56

   48 factor: NOT factor .

    $default  reduce using rule 48 (factor)


State 57

   53 factor: READIN LPAREN . RPAREN

    RPAREN  shift, and go to state 81


State 58

   34 relexpre: expression CEQ . expression

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    expression               go to state 82
    term                     go to state 31
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 59

   35 relexpre: expression GREATER_THAN . expression

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    expression               go to state 83
    term                     go to state 31
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 60

   36 relexpre: expression LESS_THAN . expression

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    expression               go to state 84
    term                     go to state 31
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 61

   38 expression: term PLUS . term

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    term                     go to state 85
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 62

   39 expression: term MINUS . term

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    term                     go to state 86
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 63

   40 expression: term OR . term

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    term                     go to state 87
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 64

   41 expression: term DOT . term

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    term                     go to state 88
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 65

   43 term: factor MULT . factor

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    factor                   go to state 89
    number                   go to state 33
    string                   go to state 34


State 66

   44 term: factor DIV . factor

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    factor                   go to state 90
    number                   go to state 33
    string                   go to state 34


State 67

   45 term: factor AND . factor

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    factor                   go to state 91
    number                   go to state 33
    string                   go to state 34


State 68

   20 print_statement: PRINT LPAREN relexpre . RPAREN

    RPAREN  shift, and go to state 92


State 69

   22 if_statement: IF relexpre LBRACE . statement_list RBRACE
   23             | IF relexpre LBRACE . statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LETTER  shift, and go to state 1
    RETURN  shift, and go to state 2
    PRINT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    FUNC    shift, and go to state 6

    statement_list           go to state 93
    statement                go to state 9
    indentifier              go to state 10
    assignment_statement     go to state 11
    print_statement          go to state 12
    while_loop_statement     go to state 13
    if_statement             go to state 14
    function_statement       go to state 15
    return_statement         go to state 16
    call_function_statement  go to state 17


State 70

   21 while_loop_statement: WHILE relexpre LBRACE . statement_list RBRACE

    LETTER  shift, and go to state 1
    RETURN  shift, and go to state 2
    PRINT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    FUNC    shift, and go to state 6

    statement_list           go to state 94
    statement                go to state 9
    indentifier              go to state 10
    assignment_statement     go to state 11
    print_statement          go to state 12
    while_loop_statement     go to state 13
    if_statement             go to state 14
    function_statement       go to state 15
    return_statement         go to state 16
    call_function_statement  go to state 17


State 71

   24 function_statement: FUNC indentifier LPAREN . RPAREN ON LBRACE statement_list RBRACE LPAREN type RPAREN
   25                   | FUNC indentifier LPAREN . arg_list RPAREN ON LBRACE statement_list RBRACE LPAREN type RPAREN

    LETTER  shift, and go to state 1
    RPAREN  shift, and go to state 95

    indentifier  go to state 96
    arg_list     go to state 97


State 72

   16 create: LPAREN . type RPAREN

    STRING  shift, and go to state 98
    INT     shift, and go to state 99

    type  go to state 100


State 73

   19 assign: EQUAL . relexpre

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_function_statement  go to state 28
    relexpre                 go to state 101
    expression               go to state 30
    term                     go to state 31
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 74

   14 assignment_statement: indentifier IN create .

    $default  reduce using rule 14 (assignment_statement)


State 75

   15 assignment_statement: indentifier IN assign .

    $default  reduce using rule 15 (assignment_statement)


State 76

   31 call_function_statement: indentifier LPAREN RPAREN .

    $default  reduce using rule 31 (call_function_statement)


State 77

   32 call_function_statement: indentifier LPAREN call_lsit . RPAREN

    RPAREN  shift, and go to state 102


State 78

   29 call_lsit: relexpre .
   30          | relexpre . COMMA call_lsit

    COMMA  shift, and go to state 103

    $default  reduce using rule 29 (call_lsit)


State 79

   58 string: DIGIT . string

    LETTER  shift, and go to state 50
    DIGIT   shift, and go to state 79

    string  go to state 52


State 80

   51 factor: LPAREN relexpre RPAREN .

    $default  reduce using rule 51 (factor)


State 81

   53 factor: READIN LPAREN RPAREN .

    $default  reduce using rule 53 (factor)


State 82

   34 relexpre: expression CEQ expression .

    $default  reduce using rule 34 (relexpre)


State 83

   35 relexpre: expression GREATER_THAN expression .

    $default  reduce using rule 35 (relexpre)


State 84

   36 relexpre: expression LESS_THAN expression .

    $default  reduce using rule 36 (relexpre)


State 85

   38 expression: term PLUS term .

    $default  reduce using rule 38 (expression)


State 86

   39 expression: term MINUS term .

    $default  reduce using rule 39 (expression)


State 87

   40 expression: term OR term .

    $default  reduce using rule 40 (expression)


State 88

   41 expression: term DOT term .

    $default  reduce using rule 41 (expression)


State 89

   43 term: factor MULT factor .

    $default  reduce using rule 43 (term)


State 90

   44 term: factor DIV factor .

    $default  reduce using rule 44 (term)


State 91

   45 term: factor AND factor .

    $default  reduce using rule 45 (term)


State 92

   20 print_statement: PRINT LPAREN relexpre RPAREN .

    $default  reduce using rule 20 (print_statement)


State 93

    3 statement_list: statement_list . statement
   22 if_statement: IF relexpre LBRACE statement_list . RBRACE
   23             | IF relexpre LBRACE statement_list . RBRACE ELSE LBRACE statement_list RBRACE

    LETTER  shift, and go to state 1
    RETURN  shift, and go to state 2
    PRINT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    FUNC    shift, and go to state 6
    RBRACE  shift, and go to state 104

    statement                go to state 40
    indentifier              go to state 10
    assignment_statement     go to state 11
    print_statement          go to state 12
    while_loop_statement     go to state 13
    if_statement             go to state 14
    function_statement       go to state 15
    return_statement         go to state 16
    call_function_statement  go to state 17


State 94

    3 statement_list: statement_list . statement
   21 while_loop_statement: WHILE relexpre LBRACE statement_list . RBRACE

    LETTER  shift, and go to state 1
    RETURN  shift, and go to state 2
    PRINT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    FUNC    shift, and go to state 6
    RBRACE  shift, and go to state 105

    statement                go to state 40
    indentifier              go to state 10
    assignment_statement     go to state 11
    print_statement          go to state 12
    while_loop_statement     go to state 13
    if_statement             go to state 14
    function_statement       go to state 15
    return_statement         go to state 16
    call_function_statement  go to state 17


State 95

   24 function_statement: FUNC indentifier LPAREN RPAREN . ON LBRACE statement_list RBRACE LPAREN type RPAREN

    ON  shift, and go to state 106


State 96

   26 arg_list: indentifier .
   27         | indentifier . COMMA arg_list

    COMMA  shift, and go to state 107

    $default  reduce using rule 26 (arg_list)


State 97

   25 function_statement: FUNC indentifier LPAREN arg_list . RPAREN ON LBRACE statement_list RBRACE LPAREN type RPAREN

    RPAREN  shift, and go to state 108


State 98

   18 type: STRING .

    $default  reduce using rule 18 (type)


State 99

   17 type: INT .

    $default  reduce using rule 17 (type)


State 100

   16 create: LPAREN type . RPAREN

    RPAREN  shift, and go to state 109


State 101

   19 assign: EQUAL relexpre .

    $default  reduce using rule 19 (assign)


State 102

   32 call_function_statement: indentifier LPAREN call_lsit RPAREN .

    $default  reduce using rule 32 (call_function_statement)


State 103

   30 call_lsit: relexpre COMMA . call_lsit

    LETTER  shift, and go to state 20
    DIGIT   shift, and go to state 21
    LPAREN  shift, and go to state 22
    PLUS    shift, and go to state 23
    MINUS   shift, and go to state 24
    NOT     shift, and go to state 25
    READIN  shift, and go to state 26

    indentifier              go to state 27
    call_lsit                go to state 110
    call_function_statement  go to state 28
    relexpre                 go to state 78
    expression               go to state 30
    term                     go to state 31
    factor                   go to state 32
    number                   go to state 33
    string                   go to state 34


State 104

   22 if_statement: IF relexpre LBRACE statement_list RBRACE .
   23             | IF relexpre LBRACE statement_list RBRACE . ELSE LBRACE statement_list RBRACE

    ELSE  shift, and go to state 111

    $default  reduce using rule 22 (if_statement)


State 105

   21 while_loop_statement: WHILE relexpre LBRACE statement_list RBRACE .

    $default  reduce using rule 21 (while_loop_statement)


State 106

   24 function_statement: FUNC indentifier LPAREN RPAREN ON . LBRACE statement_list RBRACE LPAREN type RPAREN

    LBRACE  shift, and go to state 112


State 107

   27 arg_list: indentifier COMMA . arg_list

    LETTER  shift, and go to state 1

    indentifier  go to state 96
    arg_list     go to state 113


State 108

   25 function_statement: FUNC indentifier LPAREN arg_list RPAREN . ON LBRACE statement_list RBRACE LPAREN type RPAREN

    ON  shift, and go to state 114


State 109

   16 create: LPAREN type RPAREN .

    $default  reduce using rule 16 (create)


State 110

   30 call_lsit: relexpre COMMA call_lsit .

    $default  reduce using rule 30 (call_lsit)


State 111

   23 if_statement: IF relexpre LBRACE statement_list RBRACE ELSE . LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 115


State 112

   24 function_statement: FUNC indentifier LPAREN RPAREN ON LBRACE . statement_list RBRACE LPAREN type RPAREN

    LETTER  shift, and go to state 1
    RETURN  shift, and go to state 2
    PRINT   shift, and go to state 3
    IF      shift, and go to state 4
    WHILE   shift, and go to state 5
    FUNC    shift, and go to state 6

    statement_list           go to state 116
    statement                go to state 9
    indentifier              go to state 10
    assignment_statement     go to state 11
    print_statement          go to state 12
    while_loop_statement     go to state 13
    if_statement             go to state 14
    function_statement       go to state 15
    return_statement         go to state 16
    call_function_statement  go to state 17


State 113

   27 arg_list: indentifier COMMA arg_list .
